# Marivat_David_1_notebook_smart_city_122024

./: .gitignore  Marivat_David_1_notebook_smart_city_122024.ipynb  Untitled.ipynb  myFonctions.py  nombre_nan_par_colonne.ipynb  pyproject.toml
